--- a/paginas/index.html
+++ b/paginas/index.html
@@ -173,6 +173,7 @@
         <script src="../scripts/devolver.js"></script>
         <script src="../scripts/busca.js"></script>
         <script src="../scripts/buscaMatr.js"></script>
+        <script src="../scripts/buscaData.js"></script>
         <script src="../scripts/controle.js"></script>
     </body>
 </html>
