--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,189 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css" />
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>OGCOT - Controle de TPs</title>
-    </head>
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>OGCOT - Controle de TPs</title>
+	</head>
 
-    <body>
-        <h1 id="nomePosto">OGCOT</h1>
-        <div class='hidden' id="conectando">Conectando...</div>
-        <div class='hidden' id="selecaoPosto">
-            <h2>Selecione o posto</h2>
-            <select name="Selecione o posto" id="selectPosto">
-                <option value="T-PAC">T-PAC</option>
-                <option value="T-PAS">T-PAS</option>
-                <option value="FILA-CLA">FILA-CLA</option>
-            </select>
-            <button id="btnSelecionarPosto">Selecionar</button>
-        </div>
-        <div id="principal">
-            <div class="pagina" id="inicio">
-                <h1>Início</h1>
-                <form autocomplete="off" id="formulario1">
-                    <fieldset>
-                        <legend>Tag TP</legend>
-                        <label
-                            ><input
-                                type="password"
-                                name="tag"
-                                id="tagTP"
-                                size="10"
-                                maxlength="8"
-                                title="Leitura RFID"
-                        /></label>
-                    </fieldset>
-                </form>
-                <br /><br />
-                <button
-                    id="maisOpc"
-                    title="Buscas, Cadastro, Retirar, Devolver..."
-                >
-                    Mais opções
-                </button>
-            </div>
-            <div class="pagina" id="retirar">
-                <h1>Retirar</h1>
-                <div id="numTPRetirar"></div>
-                <form autocomplete="off" id="formulario2">
-                    <fieldset>
-                        <legend>Tag Usuário</legend>
-                        <label
-                            ><input
-                                type="password"
-                                name="tag"
-                                id="tagUsuario"
-                                size="10"
-                                maxlength="8"
-                        /></label>
-                    </fieldset>
-                </form>
-            </div>
-            <div class="pagina" id="devolver">
-                <h1>Devolver</h1>
-                <div id="numTPDevolver"></div>
-                <div id="idTPDevolver"></div>
-                <form autocomplete="off" id="formulario3">
-                    <fieldset>
-                        <legend>Tag Gerente</legend>
-                        <label
-                            ><input
-                                type="password"
-                                name="tag"
-                                id="tagGerente"
-                                size="10"
-                                maxlength="8"
-                        /></label>
-                    </fieldset>
-                </form>
-            </div>
-            <div id="opcoes">
-                <button id="btnControle">Controle</button>
-                <button id="btnBusca">Busca</button>
-                <button id="btnRetirar">Retirar</button>
-                <button id="btnDevolver">Devolver</button>
-                <button id="btnTransporte">Transporte</button>
-                <button id="btnCadastro">Cadastro</button>
-                <button id="btnVoltar">Voltar</button>
-            </div>
-            <div class="pagina" id="transporte">
-                <h1>Transporte</h1>
-            </div>
-            <div class="pagina" id="controle">
-                <h1>Registros</h1>
-                <div id="processando"></div>
-                <table id="tabelaControle">
-                    <caption id="updateTime"></caption>
-                    <tr>
-                        <th>TP</th>
-                        <th>Status</th>
-                        <th>Dias</th>
-                        <th>Data</th>
-                        <th>Hora</th>
-                        <th>Piloto</th>
-                        <th>Gerente</th>
-                        <th>Posto</th>
-                    </tr>
-                    <tbody id="bodyControle"></tbody>
-                </table>
-            </div>
-            <div class="pagina" id="busca">
-                <h1>Busca</h1>
-                <div style="display: inline">
-                    <button id="btnBuscaMatr">Matrícula</button>
-                    <button id="btnBuscaData">Data</button>
-                    <button id="btnBuscaTP">TP</button>
-                    <button id="btnBuscaPosto">Posto</button>
-                    <button id="btnBuscaGerente">Gerente</button>
-                </div>
-                <div class="pagina" id="buscaMatr">
-                    <form autocomplete="off" id="formBuscaMatr">
-                        <input
-                            type="text"
-                            name="matricula"
-                            id="inputMatrBuscar"
-                        />
-                        <input
-                            type="submit"
-                            value="Buscar"
-                            id="btnBuscarMatr"
-                        />
+	<body>
+		<h1 id="nomePosto">OGCOT</h1>
+		<div class="hidden" id="conectando">Conectando...</div>
+		<div class="hidden" id="divSelecaoPosto">
+			<h2>Selecione o posto</h2>
+			<select name="Selecione o posto" id="selectPosto">
+				<option value="T-PAC">T-PAC</option>
+				<option value="T-PAS">T-PAS</option>
+				<option value="FILA-CLA">FILA-CLA</option>
+			</select>
+			<button id="btnSelecionarPosto">Selecionar</button>
+		</div>
+		<div id="principal">
+			<div class="pagina" id="inicio">
+				<h1>Início</h1>
+				<form autocomplete="off" id="formRFIDTP">
+					<fieldset>
+						<legend>Tag TP</legend>
+						<label><input type="password" name="tag" id="inputTagTP" size="10" maxlength="8" title="Leitura RFID" /></label>
+					</fieldset>
+				</form>
+				<br /><br />
+				<button id="maisOpc" title="Buscas, Cadastro, Retirar, Devolver...">Mais opções</button>
+			</div>
+			<div class="pagina" id="retirar">
+				<h1>Retirar</h1>
+				<div id="numTPRetirar"></div>
+				<form autocomplete="off" id="formRFIDRetirar">
+					<fieldset>
+						<legend>Tag Usuário</legend>
+						<label><input type="password" name="tag" id="inputTagUsuario" size="10" maxlength="8" /></label>
+					</fieldset>
+				</form>
+			</div>
+			<div class="pagina" id="devolver">
+				<h1>Devolver</h1>
+				<div id="numTPDevolver"></div>
+				<div id="idTPDevolver"></div>
+				<form autocomplete="off" id="formRFIDDevolver">
+					<fieldset>
+						<legend>Tag Gerente</legend>
+						<label><input type="password" name="tag" id="inputTagGerente" size="10" maxlength="8" /></label>
+					</fieldset>
+				</form>
+			</div>
+			<div class="menu" id="opcoes">
+				<button id="btnControle">Controle</button>
+				<button id="btnBusca">Busca</button>
+				<button id="btnRetirar">Retirar</button>
+				<button id="btnDevolver">Devolver</button>
+				<button id="btnTransporte">Transporte</button>
+				<button id="btnCadastro">Cadastro</button>
+				<button id="btnVoltar">Voltar</button>
+			</div>
+			<div class="pagina" id="transporte">
+				<h1>Transporte</h1>
+			</div>
+			<div class="pagina" id="controle">
+				<h1>Registros</h1>
+				<div id="processando"></div>
+				<table id="tabelaControle">
+					<caption id="updateTime"></caption>
+					<tr>
+						<th>TP</th>
+						<th>Status</th>
+						<th>Dias</th>
+						<th>Data</th>
+						<th>Hora</th>
+						<th>Piloto</th>
+						<th>Gerente</th>
+						<th>Posto</th>
+					</tr>
+					<tbody id="bodyControle"></tbody>
+				</table>
+			</div>
+			<div class="pagina" id="busca">
+				<h1>Busca</h1>
+				<div class="menu">
+					<button id="btnBuscaMatr">Matrícula</button>
+					<button id="btnBuscaData">Data</button>
+					<button id="btnBuscaTP">TP</button>
+					<button id="btnBuscaPosto">Posto</button>
+					<button id="btnBuscaGerente">Gerente</button>
+				</div>
+				<div class="pagina" id="buscaMatr">
+					<form autocomplete="off" id="formBuscaMatr">
+						<input type="text" name="matricula" id="inputMatrBuscar" />
+						<input type="submit" value="Buscar" id="btnBuscarMatr" />
+					</form>
+				</div>
+				<div class="pagina" id="buscaData">
+					<form autocomplete="off" id="formBuscaData">
+						<input id="inputDataBuscar" type="date" />
+						<input type="submit" id="btnBuscarData" value="Buscar" />
+					</form>
+				</div>
+				<div id="buscaTP"></div>
+			</div>
+			<div class="pagina" id="tabela">
+				<table>
+					<caption id="tituloTabela"></caption>
+					<tr>
+						<th>TP</th>
+						<th>Status</th>
+						<th>Data</th>
+						<th>Hora</th>
+						<th>Piloto</th>
+						<th>Gerente</th>
+						<th>Posto</th>
+					</tr>
+					<tbody id="bodyTabela"></tbody>
+				</table>
+			</div>
+			<div class="pagina" id="cadastro">
+				<h1>Cadastro</h1>
+				<div class="menu">
+					<button id="btnCadastroTp">TP</button>
+					<button id="btnCadastroEmpregado">Empregado</button>
+				</div>
+				<div class="menu-oculto" id="opcoesCadastro">
+                    <h3 id="tpOuEmpregado"></h3>
+					<button id="btnNovoCadastro">Novo Cadastro</button>
+					<button id="btnAtualizarCadastro">Atualizar Cadastro</button>
+				</div>
+                <div class="hidden" id="divNovoEmpregado">
+                    <form autocomplete="off" id="formNovoEmpregado">
+                        <label for="matricula">Matrícula
+                            <input type="text" name="matricula" id="matriculaNovo">
+                        </label>
+                        <label for="id">Login SEI
+                            <input type="text" name="id" id="idNovo">
+                        </label>
+												<label for="tag">TAG RFID
+													<input type="password" name="tag" id="tagNovo">
+											</label>
+                        <label for="cargo">Cargo
+                            <select name="cargo" id="cargo">
+															<option value="Piloto">Piloto</option>
+															<option value="IT">Inspetor</option>
+															<option value="Gerente">Gerente</option>
+														</select>
+                        </label>
+												<input type="submit" value="Cadastrar">
                     </form>
                 </div>
-                <div class="pagina" id="buscaData">
-                    <form autocomplete="off" id="formBuscaData">
-                        <input id="inputDataBuscar" type="date">
-                        <input type="submit" id="btnBuscarData" value="Buscar">
-                    </form>
-                </div>
-                <div id="buscaTP"></div>
-            </div>
-            <div class="pagina" id="tabela">
-                <table>
-                    <caption id="tituloTabela"></caption>
-                    <tr>
-                        <th>TP</th>
-                        <th>Status</th>
-                        <th>Data</th>
-                        <th>Hora</th>
-                        <th>Piloto</th>
-                        <th>Gerente</th>
-                        <th>Posto</th>
-                    </tr>
-                    <tbody id="bodyTabela"></tbody>
-                </table>
-            </div>
-            <div class="pagina" id="cadastro">
-                <h1>Cadastro</h1>
-            </div>
-        </div>
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+                <div id="divAtualizarCadastro"></div>
+			</div>
+		</div>
+		<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
 
-        <script>
-            var firebaseConfig = {
-                apiKey: "AIzaSyB1rkLkF8gQsQNaiXdBt6zzpy2fYSm-64I",
-                authDomain: "controle-tp-web.firebaseapp.com",
-                databaseURL: "https://controle-tp-web.firebaseio.com",
-                projectId: "controle-tp-web",
-                storageBucket: "controle-tp-web.appspot.com",
-            }
+		<script>
+			var firebaseConfig = {
+				apiKey: 'AIzaSyB1rkLkF8gQsQNaiXdBt6zzpy2fYSm-64I',
+				authDomain: 'controle-tp-web.firebaseapp.com',
+				databaseURL: 'https://controle-tp-web.firebaseio.com',
+				projectId: 'controle-tp-web',
+				storageBucket: 'controle-tp-web.appspot.com',
+			}
 
-            firebase.initializeApp(firebaseConfig)
+			firebase.initializeApp(firebaseConfig)
 
-            const db = firebase.database()
-        </script>
-        <script src="../scripts/script.js"></script>
-        <script src="../scripts/inicio.js"></script>
-        <script src="../scripts/retirar.js"></script>
-        <script src="../scripts/devolver.js"></script>
-        <script src="../scripts/busca.js"></script>
-        <script src="../scripts/buscaMatr.js"></script>
-        <script src="../scripts/buscaData.js"></script>
-        <script src="../scripts/controle.js"></script>
-    </body>
+			const db = firebase.database()
+		</script>
+		<script src="../scripts/script.js"></script>
+		<script src="../scripts/inicio.js"></script>
+		<script src="../scripts/retirar.js"></script>
+		<script src="../scripts/devolver.js"></script>
+		<script src="../scripts/busca.js"></script>
+		<script src="../scripts/buscaMatr.js"></script>
+		<script src="../scripts/buscaData.js"></script>
+		<script src="../scripts/buscaPosto.js"></script>
+		<script src="../scripts/buscaTP.js"></script>
+		<script src="../scripts/controle.js"></script>
+		<script src="../scripts/cadastro.js"></script>
+	</body>
 </html>
