Pasta paginas removida

--- a/index.html
+++ b/index.html
@@ -311,18 +311,18 @@
 
 			const db = firebase.database()
 		</script>
-		<script src="../scripts/script.js"></script>
-		<script src="../scripts/inicio.js"></script>
-		<script src="../scripts/retirar.js"></script>
-		<script src="../scripts/devolver.js"></script>
-		<script src="../scripts/busca.js"></script>
-		<script src="../scripts/buscaMatr.js"></script>
-		<script src="../scripts/buscaData.js"></script>
-		<script src="../scripts/buscaPosto.js"></script>
-		<script src="../scripts/buscaTP.js"></script>
-		<script src="../scripts/controle.js"></script>
-		<script src="../scripts/cadastro.js"></script>
-		<script src="../scripts/transporte.js"></script>
-		<script src="../scripts/semleitor.js"></script>
+		<script src="./scripts/script.js"></script>
+		<script src="./scripts/inicio.js"></script>
+		<script src="./scripts/retirar.js"></script>
+		<script src="./scripts/devolver.js"></script>
+		<script src="./scripts/busca.js"></script>
+		<script src="./scripts/buscaMatr.js"></script>
+		<script src="./scripts/buscaData.js"></script>
+		<script src="./scripts/buscaPosto.js"></script>
+		<script src="./scripts/buscaTP.js"></script>
+		<script src="./scripts/controle.js"></script>
+		<script src="./scripts/cadastro.js"></script>
+		<script src="./scripts/transporte.js"></script>
+		<script src="./scripts/semleitor.js"></script>
 	</body>
 </html>
