--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		<center>
 			<div id="alert"></div>
 		</center>
-		<div class="hidden" id="conectando">Conectando...</div>
+		<div class="hidden" id="conectando">
+			<div class="lds-dual-ring"></div>
+		</div>
 		<div class="seletor hidden" id="divSelecaoPosto">
 			<h2>Selecione o posto</h2>
 			<select name="Selecione o posto" id="selectPosto">
