ajuste css devolver retirar com senha

--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
 												
 													<input type="password" onkeypress="return onlynumber()" inputmode="numeric" name="senha1" maxlength="4" placeholder="Repita Nova Senha" id="pinNovo1" title="Digite novamente a Nova Senha com 4 dígitos">
 													<label for="mostraSenha">	
-													<input type="checkbox" value="value" onclick="mostrarOcultar()" name="mostraSenha" id="mostraSenha">Mostrar Senha</label>																
+													<input type="checkbox" value="value" onclick="mostrarOcultar()" name="mostraSenha" id="mostraSenha">Mostrar Senha</label>	
+													<button id="cancelaTrocaSenha" class="botao-terciario">Cancelar</button>														
 									</form>
 							
 						</div>
